Discovered issues with formatting on smaller screen sizes for About.js component and fixed them.

--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -1,16 +1,23 @@
 iframe {
     width: 100%;
     height: 400px;
-}
-.download-link {
-    margin: 0 auto;
-    margin-top: -110px;
-    width: 200px;
-    display: block;
-}
-
-.resume-container {
+  }
+  
+  .resume-wrapper {
     position: relative;
     z-index: 1;
     margin-bottom: 50px;
+  }
+  
+  .resume-container {
+    position: relative;
+  }
+  
+  .fixed-download-link {
+    position: absolute;
+    top: -150px; /* Adjust as needed */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 200px;
+    z-index: 2;
   }
