--- a/src/styles/ResumeContent.css
+++ b/src/styles/ResumeContent.css
@@ -5,24 +5,35 @@
 }
 
 .resume-list {
-    font-family: 'Hind Madurai', sans-serif;
-    margin-left: 20px;
+  font-family: 'Hind Madurai', sans-serif;
+  margin-left: 20px;
 }
 
 .resume-text {
-    font-size: 28px; /* Adjust the font size as needed */
-  }
+  font-size: 28px;
+}
 
 .resume-list li {
-    font-size: 18px; /* Adjust the font size as needed */
-  }
+  font-size: 18px;
+}
 
 .resume-page {
-    background-image: url('../images/resume-background.jpg');
-    color: white;
-    background-size: cover;
+  background-image: url('../images/resume-background.jpg');
+  color: white;
+  background-size: cover;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .content-wrapper {
-    padding-bottom: 33px;
+  flex-grow: 1;
+  padding-bottom: 33px;
+  text-align: left;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
 }
